[package]
name = "acmi-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.2", default-features = false, features = [ "deflate" ]}
itertools = "0.10.2"

[lib]
crate-type = ["cdylib", "rlib"]
